[package]
name = "btwattch2-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9.2"
chrono = "0.4.19"
futures = "0.3.21"
#influxdb = { version = "0.5.2", default-features = false, features = ["derive", "use-serde", "h1-client-rustls"] }
influxdb2_client = { git = "https://github.com/influxdata/influxdb_iox" }
tokio = { version = "1.19.2", features = ["macros", "rt", "rt-multi-thread"] }
uuid = "0.8.2"
